changelog.txt
V1.7
  - You can now load themes into playfair. This is in the design/style tab but don't actually use it yet. We may eventually have a second graph style but for now we are still just using the official one.

  - You can now coerce playfair to parse a variable as text, numeric, or date. Use this when for example you have year data like 1989, 1990, etc. that Playfair would not normally parse as a date. At the moment, if you change your data, it will cause Playfair to re-evaluate the data and reset your selections.

  - I think I've solved all the problems with missing data but I can't swear to it. Please let me know.

  - Custom axes for dates are now possible.

V1.6
  - Playfair has moved servers and is no longer anti-union or anti-anything. All saves should work.

  - Re-coloring an arrow works now

V1.5
  - Grouped barcharts with negative values now work. This is all kinda hanging together with gum and paper clips until I rewrite all the bar chart stuff. Please make sure your values are correct and etc.

  - Fixed a bug where certain datasets had problems with axes being drawn correctly. Thanks Nick!

V1.4
  - THIS UPGRADE BREAKS A BUNCH OF STUFF ON OLD GRAPHS. You will have to redraw old graphs to get contextual menus and color changing to work. Big changes to how things work under the hood that don't really matter to users but let me know if changing colors or contextual menus are acting strangely.

V1.3
  - Stacked barcharts with negative values now work

  - Minor layout changes

V1.25
  - You can now add horizontal lines to charts with date data on the x-axis. Trend lines with slopes and vertical lines are still quite broken. This is a tricky problem.

  - fixed a bug where sometimes footers had transparent strips in them

  - Fixed the bug where hovering/unhovering sometimes shrunk text. Now text just gets a shadow on rollover.

  - multi-line text flow for hed/dek/source/note should be waaaaay better now. This does slow down redraw a bit.

