@@ -904,21 +904,39 @@ window.playfair = (function () {
 		headerwidth=this.width-this.header_leftpad-this.header_rightpad
 
 		// draw main title
-		hedfontsize=parseInt(this.hedsize)
+		var hedfontsize=parseInt(this.hedsize)
 		while(multitext(hed,{'font-family':this.hedface,'font-size':hedfontsize+'px','font-weight':this.hedweight,'dominant-baseline':'text-before-edge',fill:this.hedtextfill},headerwidth).length>1){
 			hedfontsize=hedfontsize-1
 		}
+		console.log('hedsizemin: ',this.hedsizemin,hedfontsize)
+
+		if (hedfontsize<parseInt(this.hedsizemin)){
+			hedfontsize=this.hedsizemin
+			alert('Your headline is too long.')
+		}
+
 		var hed=snapobj.text(this.x+this.header_leftpad,this.y+this.header_toppad,hed).attr({'font-family':this.hedface,'font-size':hedfontsize,'font-weight':this.hedweight,'dominant-baseline':'text-before-edge',fill:this.hedtextfill,colorchange:'fill',context:'text_context_menu'})
 		hed.node.setAttributeNS("http://www.w3.org/XML/1998/namespace", "xml:space", "preserve")
 		var hed_coords=hed.getBBox()
 
 		// draw subtitle
-		dekfontsize=parseInt(this.deksize)
+		var dekfontsize=parseInt(this.deksize)
 		while(multitext(dek,{'font-family':this.dekface,'font-size':dekfontsize,'font-weight':this.dekweight,'dominant-baseline':'text-before-edge',fill:this.dektextfill},headerwidth).length>2){
 			dekfontsize=dekfontsize-1
 		}
+
+		if (dekfontsize<parseInt(this.deksizemin)){
+			dekfontsize=this.deksizemin
+			alert('Your subhead is too long.')
+		}
+
 		lines=multitext(dek,{'font-family':this.dekface,'font-size':dekfontsize,'font-weight':this.dekweight,'dominant-baseline':'text-before-edge',fill:this.dektextfill},headerwidth)
-		for(var i=0;i<lines.length;i++){
+	
+		if (lines.length>this.maxdeklines){
+			var stop=this.maxdeklines
+		} else {var stop=lines.length}
+
+		for(var i=0;i<stop;i++){
 			var dek=snapobj.text(this.x+this.header_leftpad,this.y+this.header_toppad+hed_coords.y2+i*parseInt(dekfontsize)*1.1,lines[i]).attr({'font-family':this.dekface,'font-size':dekfontsize,'font-weight':this.dekweight,'dominant-baseline':'text-before-edge',ident:'dek',fill:this.dektextfill,colorchange:'fill',context:'text_context_menu'})
 			dek.node.setAttributeNS("http://www.w3.org/XML/1998/namespace", "xml:space", "preserve")
 		}
@@ -962,15 +980,18 @@ window.playfair = (function () {
 
 			// hed
 			'hedsize':'20px',
+			'hedsizemin':'18px',
 			'hedweight':700,
 			'hedface':'Lato',
 			'hedtextfill':'black',
 
 			// dek
 			'deksize':'16px',
+			'deksizemin':'15px',
 			'dekweight':400,
 			'dekface':'Lato',
 			'dektextfill':'black',
+			'maxdeklines':2,
 
 			// data labels
 			'datasize':'11px',
@@ -1074,12 +1095,14 @@ window.playfair = (function () {
 			'xlabel_textweight':400,
 			'xlabel_textface':'Lato',
 			'xlabel_textfill':'black',
+			'xlabel_maxlength':300,
 
 			// y label
 			'ylabel_textsize':'14px',
 			'ylabel_textweight':400,
 			'ylabel_textface':'Lato',
 			'ylabel_textfill':'black',
+			'ylabel_maxlength':300,
 
 			// legend
 			'legend_location':'top',
@@ -1671,10 +1694,18 @@ function draw_axes(playobj,xvar,yvar,shiftx,shifty) {
 
 	// y label
 	if (typeof(playobj.ylabel)!=undefined){
-		var ylab=snapobj.text(playobj.x+playobj.left_margin,((playobj.y+playobj.height-playobj.logo_height-playobj.footer_toppad)+(playobj.y+playobj.head_height+playobj.top_margin+legend_height+playobj.legend_toppad+playobj.legend_bottompad))/2,String(playobj.ylabel)).attr({fill:this.ylabel_textfill,ident:'yaxis','font-size':playobj.ylabel_textsize,'font-weight':playobj.ylabel_textweight,'font-family':playobj.ylabel_textface,'dominant-baseline':'central','text-anchor':'middle',colorchange:'fill',context:'text_context_menu'})
+		var lines=multitext(String(playobj.ylabel),{'font-size':playobj.ylabel_textsize,'font-weight':playobj.ylabel_textweight,'font-family':playobj.ylabel_textface},playobj.ylabel_maxlength)
+
+		if(lines.length>2){
+			alert('Your y-axis label is too long.')
+			lines=lines.splice(0,2)
+		}
+
+		var ylab=snapobj.text(playobj.x+playobj.left_margin,((playobj.y+playobj.height-playobj.logo_height-playobj.footer_toppad)+(playobj.y+playobj.head_height+playobj.top_margin+legend_height+playobj.legend_toppad+playobj.legend_bottompad))/2,lines).attr({fill:this.ylabel_textfill,ident:'yaxis','font-size':playobj.ylabel_textsize,'font-weight':playobj.ylabel_textweight,'font-family':playobj.ylabel_textface,'dominant-baseline':'central','text-anchor':'middle',colorchange:'fill',context:'text_context_menu'})
+		ylab.selectAll("tspan:not(:first-child)").attr({x:ylab.attr('x'),dy:parseInt(playobj.ylabel_textsize)})
 		ylab.node.setAttributeNS("http://www.w3.org/XML/1998/namespace", "xml:space", "preserve")
 		ylab_coords=ylab.getBBox()
-		ylab.attr({y:ylab_coords.y-(ylab_coords.height/2)})
+		ylab.attr({y:ylab_coords.y-(ylab_coords.height/2),x:parseFloat(ylab.attr('x'))+(lines.length-1)*parseInt(ylabel_textsize)})
 		ylab.transform('r270')
 		ylab_coords=ylab.getBBox()
 		ylab_width=ylab_coords.width
@@ -1707,7 +1738,16 @@ function draw_axes(playobj,xvar,yvar,shiftx,shifty) {
 
 	// now the full x-offset is known, can start drawing the x-axis. x label:
 	if (typeof(playobj.xlabel)!=undefined){
-		var xlab=snapobj.text((total_xoffset+2*playobj.x+playobj.width-playobj.right_margin)/2,playobj.y+playobj.height-playobj.bottom_margin-playobj.footer_height,String(playobj.xlabel)).attr({fill:this.xlabel_textfill,ident:'xaxis','font-size':playobj.xlabel_textsize,'font-weight':playobj.xlabel_textweight,'font-family':playobj.xlabel_textface,'dominant-baseline':'text-before-edge','text-anchor':'middle',colorchange:'fill',context:'text_context_menu'})
+		var lines=multitext(String(playobj.xlabel),{'font-size':playobj.xlabel_textsize,'font-weight':playobj.xlabel_textweight,'font-family':playobj.xlabel_textface},playobj.xlabel_maxlength)
+
+		if(lines.length>2){
+			alert('Your x-axis label is too long.')
+			lines=lines.splice(0,2)
+		}
+
+		console.log(lines)
+		var xlab=snapobj.text((total_xoffset+2*playobj.x+playobj.width-playobj.right_margin)/2,playobj.y+playobj.height-playobj.bottom_margin-playobj.footer_height,lines).attr({fill:this.xlabel_textfill,ident:'xaxis','font-size':playobj.xlabel_textsize,'font-weight':playobj.xlabel_textweight,'font-family':playobj.xlabel_textface,'dominant-baseline':'text-before-edge','text-anchor':'middle',colorchange:'fill',context:'text_context_menu'})
+		xlab.selectAll("tspan:not(:first-child)").attr({x:xlab.attr('x'),dy:parseInt(playobj.xlabel_textsize)})
 		xlab.node.setAttributeNS("http://www.w3.org/XML/1998/namespace", "xml:space", "preserve")
 		coords=xlab.getBBox()
 		xlab.attr({y:coords.y-coords.height})
@@ -1740,7 +1780,7 @@ function draw_axes(playobj,xvar,yvar,shiftx,shifty) {
 
 		lines=multitext(string,{ident:'xaxis','font-size':playobj.xtick_textsize,'font-weight':playobj.xlabel_textweight,'font-family':playobj.xlabel_textface,'dominant-baseline':'text-before-edge','text-anchor':'middle'},maxwidth)
 		for(var j=0;j<lines.length;j++){
-			var temp=snapobj.text(0,j*parseInt(playobj.xtick_textsize),lines[j]).attr({fill:this.xlabel_textfill,ident:'xaxis','font-size':playobj.xtick_textsize,'font-weight':playobj.xlabel_textweight,'font-family':playobj.xlabel_textface,'dominant-baseline':'text-before-edge','text-anchor':'middle',colorchange:'fill',context:'text_context_menu'})
+			var temp=snapobj.text(0,j*parseInt(playobj.xtick_textsize),lines[j]).attr({fill:this.xtick_textfill,ident:'xaxis','font-size':playobj.xtick_textsize,'font-weight':playobj.xtick_textweight,'font-family':playobj.xtick_textface,'dominant-baseline':'text-before-edge','text-anchor':'middle',colorchange:'fill',context:'text_context_menu'})
 			temp.node.setAttributeNS("http://www.w3.org/XML/1998/namespace", "xml:space", "preserve")
 			coords=temp.getBBox()
 			temp.attr({y:coords.y-coords.height})
@@ -1851,6 +1891,10 @@ function draw_axes(playobj,xvar,yvar,shiftx,shifty) {
 	for(var i=0;i<key_elements.length;i++){
 		snapobj.append(key_elements[i])
 	}
+
+	// move the ylabel to the center of the y-axis
+	ylab.attr({y:ystart_ycoord+(yfinal_ycoord-ystart_ycoord)/2})
+
 	return [xstart_xcoord,xfinal_xcoord,ystart_ycoord,yfinal_ycoord]
 }
 
