@@ -6,10 +6,12 @@
 "head_height":0,
 "footer_height":0,
 "hedsize":"20px",
+"hedsizemin":"18px",
 "hedweight":700,
 "hedface":"Lato",
 "hedtextfill":"black",
 "deksize":"16px",
+"deksizemin":"15px",
 "dekweight":400,
 "dekface":"Lato",
 "dektextfill":"black",
@@ -17,6 +19,7 @@
 "dataweight":400,
 "dataface":"Lato",
 "datatextfill":"black",
+"maxdeklines":2,
 "annotatesize":"14px",
 "annotateweight":400,
 "annotateface":"Lato",
@@ -92,10 +95,12 @@
 "xlabel_textweight":400,
 "xlabel_textface":"Lato",
 "xlabel_textfill":"black",
+"xlabel_maxlength":300,
 "ylabel_textsize":"14px",
 "ylabel_textweight":400,
 "ylabel_textface":"Lato",
 "ylabel_textfill":"black",
+"ylabel_maxlength":300,
 "legend_location":"top",
 "legend_maxwidth":0.1,
 "legend_textsize":"12px",
