@@ -1,5 +1,10 @@
 changelog.txt
+
 V1.7
+  - possible to have x- and y-axis labels that stretch over two lines now (but no more, and there is now a max length restriction).
+
+  - There are now more restrictions for the lengths of heads and subheads. Write shorter heads/subheads!
+
   - You can now load themes into playfair. This is in the design/style tab but don't actually use it yet. We may eventually have a second graph style but for now we are still just using the official one.
 
   - You can now coerce playfair to parse a variable as text, numeric, or date. Use this when for example you have year data like 1989, 1990, etc. that Playfair would not normally parse as a date. At the moment, if you change your data, it will cause Playfair to re-evaluate the data and reset your selections.
